# hdx-geo-data-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  logging.conf  logging.dev.conf  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: build.yml
app/: __init__.py  auth.py  config.py  docs.py  models.py  utils.py
app/middleware/: app_identifier_middleware.py  mixpanel.py  mixpanel_tracking_middleware.py  utils.py
app/middleware/util/: util.py
app/routers/: gdal_vector.py  health.py  vector.py  vector_utils.py
app/routers/gdal/vector/: convert.py
app/tests/: conftest.py
app/tests/test_auth/: test_header_validation.py
app/tests/test_mixpanel/: test_event_tracking.py
app/tests/utils/: utils.py
