[project]
name = "hdx-geo-data-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "content-types",
    "fastapi[standard]",
    "httpx[http2]",
    "mixpanel",
    "python-dotenv",
    "python-json-logger",
    "python-magic",
    "ua-generator",
    "ua-parser",
]

[dependency-groups]
dev = ["pre-commit", "ruff", "taskipy", "pytest", "pytest-asyncio"]

[tool.taskipy.tasks]
# uv run task app
app = "fastapi dev app"
export = "uv sync -q && uv export -o requirements.txt -q --no-dev --no-emit-project --no-hashes && uv export -o requirements-dev.txt -q --no-emit-project --no-hashes"
ruff = "ruff format && ruff check && ruff format"
